2006-07-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R: Coercions "Matrix" -> (sparse|dense)Matrix
	via new smart
	* R/Auxiliaries.R (as_Csparse, as_dense, .M.shapse): new
	utility functions.


2006-07-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Csparse.R (tril, triu, band): do return *triangular* classed
	matrices when appropriate; band() even symmetric ones.
	(replCmat): extend to potentially all "CsparseMatrix"
	* R/Tsparse.R (replTmat): extend to all "TsparseMatrix"; hence
	allow subassignment for special sparse matrices.

	* R/Auxiliaries.R (as_geClass): factor out the  .M.kind() functionality

	* src/lmer.c (mer_MCMCsamp, glmer_MCMCsamp): new 'verbose'
	argument; in glmer_*(): print only if(verbose).

	speed-optimize a few places by moving REAL(.) out of loops.

	* src/lmer.h, src/init.h, R/lmer.R:  related to above.

2006-07-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R("["): disable ("Matrix", i = "logical", j = "missing"),
		since that wrongly triggers also for M[ logi , ]

	* R/denseMatrix.R: "[" methods now also work e.g. when indexing
	a symmetric matrix that results in a non-symmetric one.
	* R/Auxiliaries.R (as_geClass): new function used in "[" above.

	* R/dMatrix.R: make round(M) work as round(M, 0)

	* R/dgTMatrix.R (image): coordinate system and axis now use
	1-based indices, not 0-based ones.

	* R/Tsparse.R (.ind.prep for "["): get rid of max(<empty>) warning.
	* tests/indexing.R: test it.

	* NAMESPACE: export isSymmetric(); has been a generic in "base"	for a while;
	* man/isSymmetric-methods.Rd: and document it.

	* R/SparseM-conv.R: added coercion methods for some 'SparseM' matrices.
	* man/SparseM-conv.Rd: docu them

	* tests/other-pkgs.R: renamed from tests/graph.R and add example
		for 'SparseM' conversions

2006-07-17  Douglas Bates  <Douglas.Bates@R-project.org>

	* R/Matrix.R (head): added head() and tail() methods.

2006-07-17  Martin Maechler  <maechler@stat.math.ethz.ch>
